补充上一次提交

--- a/docs/杂项/刷机.md
+++ b/docs/杂项/刷机.md
@@ -1,31 +1,31 @@
 # 刷机
 
-### 黑域指令
+## 黑域指令
 
 ```zsh
 adb -d shell sh /data/data/me.piebridge.brevent/brevent.sh
 ```
 
-### 冰箱指令
+## 冰箱指令
 
 ```zsh
 adb shell sh /sdcard/Android/data/com.catchingnow.icebox/files/start.sh
 ```
 
-### 刷机 fastboot 指令
+## 刷机 fastboot 指令
 
 ```zsh
 fastboot flash recovery twrp.img
 fastboot boot twrp.img
 ```
 
-### 启动 Shizuku
+## 启动 Shizuku
 
 ```zsh
 adb shell sh /sdcard/Android/data/moe.shizuku.privileged.api/start.sh
 ```
 
-### 启动 scene
+## 启动 scene
 
 ```zsh
 adb shell sh /data/user/0/com.omarea.vtools/files/up.sh
