--- a/docs/杂项/刷机.md
+++ b/docs/杂项/刷机.md
@@ -1,18 +1,18 @@
 # 刷机
 
-## 黑域指令
+## 黑域
 
 ```zsh
 adb -d shell sh /data/data/me.piebridge.brevent/brevent.sh
 ```
 
-## 冰箱指令
+## 冰箱
 
 ```zsh
 adb shell sh /sdcard/Android/data/com.catchingnow.icebox/files/start.sh
 ```
 
-## 刷机 fastboot 指令
+## 刷入 fastboot 
 
 ```zsh
 fastboot flash recovery twrp.img
