正在写刷机步骤

--- a/docs/04_JDC刷机/03_配置一：硬盘分区.md
+++ b/docs/04_JDC刷机/03_配置一：硬盘分区.md
@@ -1,1 +1,28 @@
 # 配置一：硬盘分区
+
+::: tip 前言
+从上一步应该已经留意到你的 `软件包` 容量只有 16M，这个太小了，后续要装软件什么的，容量完全不够<br>
+因此我们需要先给硬盘分区，给软件包分区多一些
+:::
+
+### 准备工作
+
+1. 菜单进入，打开 ssh 通道
+2. 菜单进入 `软件包` ，下载插件 `fdisk`
+3. 准备 shell 工具
+
+::: danger 注意
+你可能在软件包中找不到想要的软件，再点一次更新试试<br>
+后面也可能你下载了，但输入指令的时候又是 not found，可以尝试卸载掉插件，再下载一次  
+:::
+
+### 通过 ssh 连接 OpenWrt
+打开shell工具，建立远程连接，账号root，密码123456
+
+### 查看挂载点
+
+### 开始分区
+
+### 挂载分区
+
+### 最后
