完善jdc刷机文章中

--- a/docs/04_JDC刷机/03_配置一：硬盘分区.md
+++ b/docs/04_JDC刷机/03_配置一：硬盘分区.md
@@ -2,28 +2,107 @@
 
 ::: tip 前言
 从上一步应该已经留意到你的 `软件包` 容量只有 16M，这个太小了，后续要装软件什么的，容量完全不够<br>
-因此我们需要先给硬盘分区，给软件包分区多一些
+因此我们需要先给硬盘分区，给软件包分区多一些<br>
+当然这一步我会分两个分区，小的容量给软件包，大的用于后面的配置
 :::
 
 ### 准备工作
 
-1. 菜单进入，打开 ssh 通道
-2. 菜单进入 `软件包` ，下载插件 `fdisk`
-3. 准备 shell 工具
+1. 菜单进入 `管理权` ，选择 `SSH访问`，打开 ssh 通道
 
-::: danger 注意
-你可能在软件包中找不到想要的软件，再点一次更新试试<br>
-后面也可能你下载了，但输入指令的时候又是 not found，可以尝试卸载掉插件，再下载一次  
-:::
+![SSH访问](/JDC刷机/03/允许ssh访问.png)
+
+2. 菜单进入 `软件包` ，先点击 `更新列表`，然后再下载插件 `fdisk` 和 `cfdisk`
+
+   ::: danger 注意
+   你可能在软件包中找不到想要的软件，再点一次更新试试<br>
+   后面也可能你下载了，但输入指令的时候又说找不到指令，可以尝试卸载掉插件，再下载一次  
+   :::
+
+3. [准备 NxShell 工具](https://nxshell.github.io/)
 
 ### 通过 ssh 连接 OpenWrt
 
 打开 shell 工具，建立远程连接，账号 root，密码 123456
 
+![SSH访问](/JDC刷机/03/ssh连接.png)
+
 ### 查看挂载点
+
+1. 输入该指令查看一下分区情况
+
+```sh
+df -h
+```
+
+2. 输入这个指令查看扩容硬盘的挂载点，着重看一下这个命名，如果你的和我不同，记得替换命名
+
+```sh
+fdisk -l
+```
 
 ### 开始分区
 
+输入指令
+
+```sh
+cfdisk /dev/mmcblk0
+```
+
+1. 选中 `Free space`，然后再选中 `New` 选项，新建一个分区，大小我这里设置了 `500M` ，你可以看情况设置自己的，然后再将剩余的空间归成另一个分区
+2. 选中分区后，调到 `Write` 选项，回车再 yes 确认，另一个分区同理
+
+操作完成后就像这样：
+
+TODO
+
+3. 选中 `Quit` 退出
+
 ### 挂载分区
+
+1. 接下来格式化一下刚刚新建的分区，轮流给分区格式化
+
+```sh
+# 分区一
+mkfs.ext4 /dev/mmcblk0p1
+
+# 分区二
+mkfs.ext4 /dev/mmcblk0p2
+
+```
+
+2. 然后在 mnt 目录下创建对应的目录，名称和分区名一致，方便记忆
+
+```sh
+# 分区一
+mkdir /mnt/mmcblk0p1
+
+# 分区二
+mkdir /mnt/mmcblk0p2
+
+```
+
+3. 将我们的分区，挂载到我们刚刚创建的目录下
+
+```sh
+# 分区一
+mount /dev/mmcblk0p1 /mnt/mmcblk0p1/
+
+# 分区二
+mount /dev/mmcblk0p2 /mnt/mmcblk0p2/
+
+```
+
+4. 最后我们再用命令检查一下，如果有 lost+found 就说明挂载成功了
+
+```sh
+ls -alh /mnt/mmcblk0p1/
+```
+
+5. 之前我们都是两个分区一起操作的，到这里我们就只需要操作第一个分区就行了，将 `/overlay` 分区的文件复制到我们刚刚创建的目录中
+
+```sh
+cp -r /overlay/* /mnt/mmcblk0p1/
+```
 
 ### 最后
