完成了关于jdc第三篇文章

--- a/docs/04_JDC刷机/03_配置一：硬盘分区.md
+++ b/docs/04_JDC刷机/03_配置一：硬盘分区.md
@@ -8,7 +8,7 @@
 
 ### 准备工作
 
-1. 菜单进入 `管理权` ，选择 `SSH访问`，打开 ssh 通道
+1. 菜单进入 `管理权` ，选择 `SSH访问`，检查一下 ssh 通道是否打开
 
 ![SSH访问](/JDC刷机/03/允许ssh访问.png)
 
@@ -19,7 +19,7 @@
    后面也可能你下载了，但输入指令的时候又说找不到指令，可以尝试卸载掉插件，再下载一次  
    :::
 
-3. [准备 NxShell 工具](https://nxshell.github.io/)
+3. [下载 NxShell 工具](https://nxshell.github.io/)
 
 ### 通过 ssh 连接 OpenWrt
 
@@ -41,6 +41,8 @@ df -h
 fdisk -l
 ```
 
+![SSH访问](/JDC刷机/03/配置-1.png)
+
 ### 开始分区
 
 输入指令
@@ -49,24 +51,34 @@ fdisk -l
 cfdisk /dev/mmcblk0
 ```
 
-1. 选中 `Free space`，然后再选中 `New` 选项，新建一个分区，大小我这里设置了 `500M` ，你可以看情况设置自己的，然后再将剩余的空间归成另一个分区
+![SSH访问](/JDC刷机/03/配置-2.png)
+
+1. 选中 `Free space`，然后再选中 `New` 选项，新建一个分区，大小我这里设置了 `0.5G` ，你可以看情况设置自己的，然后再将剩余的空间归成另一个分区
 2. 选中分区后，调到 `Write` 选项，回车再 yes 确认，另一个分区同理
 
 操作完成后就像这样：
 
-TODO
+![SSH访问](/JDC刷机/03/配置-3.png)
 
 3. 选中 `Quit` 退出
 
 ### 挂载分区
 
-1. 接下来格式化一下刚刚新建的分区，轮流给分区格式化
+首先我们输入这个指令，检查一下分区后的命名
+
+```sh
+fdisk -l
+```
+
+![SSH访问](/JDC刷机/03/配置-4.png)
+
+1. 记住名字，我们正式开始，格式化一下刚刚新建的分区，轮流给分区格式化
 
 ```sh
 # 分区一
 mkfs.ext4 /dev/mmcblk0p1
 
-# 分区二
+# 分区二 这个会慢一点，耐心等待
 mkfs.ext4 /dev/mmcblk0p2
 
 ```
@@ -105,4 +117,31 @@ ls -alh /mnt/mmcblk0p1/
 cp -r /overlay/* /mnt/mmcblk0p1/
 ```
 
+### 配置挂载点
+
+1. 菜单 `挂载点` 找到 `挂载点` 点击添加
+
+   ![SSH访问](/JDC刷机/03/配置-5.png)
+
+2. 接下来像我这样配置
+
+   ![SSH访问](/JDC刷机/03/挂载点-1.png)
+
+   ![SSH访问](/JDC刷机/03/挂载点-2.png)
+
+3. 保存后，前面别忘了勾选上，再点击最下面的保存并应用按钮
+
+   ![SSH访问](/JDC刷机/03/挂载点-3.png)
+
+4. 弄好之后，重启一下路由器，在进入 `挂载点` 和 `软件包` 看看，应该扩容成功了
+
+   ![SSH访问](/JDC刷机/03/挂载点-4.png)
+
+   ![SSH访问](/JDC刷机/03/挂载点-5.png)
+
 ### 最后
+
+::: tip 参考连接
+这里主要是参考了别人的做法，这个是参考连接，同时感谢这位大神<br>
+[eSir OpenWrt 固件/overlay 分区（软件包）扩容方法](https://zhuanlan.zhihu.com/p/652959325)
+:::
